hide install multi buttons when searching

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -573,6 +573,7 @@ function doSearch(button) {
 	filter = myTrim(filter);
 	$('#searchBox').val(filter);
 	$(".appButtons,#maxPerPage,.allButtons").prop("disabled",false);
+	$(".multi_installDiv").hide();
 	$("#templates_content,#AppsOnly,#templateSortButtons").show();
 	$("#AppStore").prop("disabled",true);
 
