Revert change from checking tab width to rather window width and hard code it to be 1920.  Checking tab width messes up on Azure / Grey them

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -529,7 +529,11 @@ function changePage(pageNumber) {
 }
 
 function getWindowWidth() {
-	return $('.tabs').width();
+	var width = $(window).width();
+	if ( width > 1920 ) {
+		width = 1920;
+	}
+	return width;
 }
 
 function myAlert(description,textdescription,textimage,imagesize, outsideClick, showCancel, showConfirm, alertType) {
