undo 09.03 changes instead get current width of tabs

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -529,10 +529,8 @@ function changePage(pageNumber) {
 }
 
 function getWindowWidth() {
-	var width = $(window).width();
-	if ( width > 1920 ) {
-		width = 1920;
-	}
+	var width = $('.tabs').width();
+
 	return width;
 }
 
