--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -132,6 +132,8 @@ var categoryDesc = {
 	All: "All Available Applications"
 	};
 
+var checkStaleVar = setInterval(function(){ checkStale(); },3000);
+	
 $(function(){
 	$("#sortorder").attr("data-oldWindowWidth",getWindowWidth());
 
@@ -1185,6 +1187,21 @@ function updateViewMode(id,buttonClass) {
 	});
 }
 
+function checkStale() {
+	var webTime = $("#lastUpdated").attr("data-lastUpdated");
+	$.post(URL,{action:'checkStale',webTime:webTime},function(data) {
+		if (data) {
+			$("#debugging").html(data);
+			if (myTrim(data) == "true") {
+				$("#debugging").html("true motherfucker");
+				clearInterval(checkStaleVar);
+        myAlert("Database Out Of Sync","Another Browser Tab Has Updated The Application Database.  Reloading The Apps Tab In 10 Seconds.","","",false,false,false,"error");
+				setTimeout(function(){ window.location.reload(); },10000);
+			}
+		}
+	});
+}
+
 function makePlural(string,count) {
 	if ( (count > 1) || (count == 0) ) {
 		return string + "s";
@@ -1452,6 +1469,7 @@ Sort Direction:
 </div>
 </span>
 <span id='sortorder' data-sortorder='' data-docker='' data-section='AppStore' data-main_category='MainCategory' data-selected=''></span>
+<span id='lastUpdated' data-lastUpdated=''></span>
 </body>
 </FORM>
 <span id='debugging'></span>
