fix display aberration from switching from previous apps to pinned apps

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1139,7 +1139,7 @@ function pinnedApps(button) {
 	$("#"+button).prop("disabled",true);
 	$("#sortorder").attr("data-section",button);
 	clearSearchBox();
-	$("#templates_content,.dockerSearch,#AppsOnly,.multi_install").hide();
+	$("#templates_content,.dockerSearch,#AppsOnly,.multi_installDiv").hide();
 	$("#templates_content").html("<center><font size='3'>Searching</font></center>");
 	$("#templates_content,#sortButtons,#Total1,#templateSortButtons").show();
 	enableIcon("#sortIcon",true);
