--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -196,11 +196,9 @@ $(function(){
 			if ( ! isIconEnabled(origin) ) {
 				var displayContent = "Changing Of Views Disabled";
 			} else {
-				var myID = origin.attr('id');
 				setSortOrder();
 				var displayContent = $("#tooltipviews").html();
-				$("#tooltipviews").attr("data-backup",displayContent);
-				$("#tooltipviews").html("");
+				$("#tooltipviews").html(""); // Because I'm using id's instead of classes
 			}
 			instance.content(displayContent);
 		},
@@ -209,7 +207,6 @@ $(function(){
 			$(".sortButton,.dirButton").click(function() { changeSortOrder(this.id,$(this).attr("class")); });
 		},
 		functionAfter: function(instance,helper) {
-			$("#tooltipviews").html($("#tooltipviews").attr("data-backup"));
 			setSortOrder();
 		}
 	});
